Revision history for BSON

{{$NEXT}}

v1.12.1   2019-08-13 08:17:13-04:00 America/New_York

  [!!! END OF LIFE NOTICE !!!]

    - Version v1.12.0 is the final feature release of the MongoDB BSON
      library.  The library is now in a 12-month "sunset" period and will
      receive security patches and critical bug fixes only.  The BSON
      library will be end-of-life and unsupported on August 13, 2020.

v1.12.0   2019-07-12 12:06:36-04:00 America/New_York

    [Added]

    - Added BSON::Array as a wrapper for edge cases in the MongoDB driver
      where an array reference could be misinterpreted as a top-level document
      container.

v1.10.2   2018-12-07 12:26:15-05:00 America/New_York

    [Bugs fixed]

    - PERL-1045 Fixed module name typo in fork-protection code.

v1.10.1   2018-11-30 00:33:12-05:00 America/New_York

    [Bugs fixed]

    - PERL-1043 Max depth limits miscounted BSON::Raw, triggering
      exceptions when there shouldn't be one.

v1.10.0   2018-11-29 11:10:19-05:00 America/New_York

    [Bugs fixed]

    - PERL-1009 BSON 1.8.1 fails on bleadperl with -Duselongdouble

    [Changed]

    - PERL-606 Improve BSON error messages

    - PERL-1010 BSON::Raw add get_first_key method

    - PERL-740 Limit BSON encoding/decoding to max depth limits

    - PERL-975 Implement ObjectID spec

    [Testing]

    - PERL-737 Test encoding of dual vars and PVMG types

v1.8.1    2018-10-01 16:28:47-04:00 America/New_York

    [Bugs fixed]

    - PERL-1000 Fixed ExtJSON conversions on 32-bit perls

v1.8.0    2018-09-12 20:57:40-04:00 America/New_York

    [*** Deprecations ***]

    - Deprecated the 'inflate_extjson' method in favor of the new
      'extjson_to_perl' method.

    [Added]

    - PERL-747 Added support for Extended JSON v2

    [Testing]

    - PERL-738 Added regression tests for Perl->BSON edge cases

v1.6.7    2018-07-10 09:58:56-04:00 America/New_York

    [Testing]

    - PERL-954 Prevent deprecation warnings from use of deprecated MongoDB