@@ -7,8 +7,8 @@ copyright_holder = Stefan G. and MongoDB, Inc.
 [@DAGOLDEN]
 :version = 0.072
 authority = cpan:MONGODB
-github_issues = 0
-Bugtracker.web = https://jira.mongodb.org/browse/PERL
+github_issues = 1
+no_bugtracker = 1
 UploadToCPAN.pause_cfg_file = .pause-mongodb
 Test::ReportPrereqs.include[0] = JSON::PP
 Test::ReportPrereqs.include[1] = JSON::XS
